--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
+	<meta name="google-site-verification" content="C4dkUc_X5rjj0N-fMh_rBmEs2vO35zX4ve6_szX3NLg" />
 	
 	
 	<!-- Font -->
